# cvat2qwen3vl

./: .gitignore  README.md  config.yaml  main.py  model_registry.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  start-prod.bat  start-prod.sh  start.bat  start.sh
converters/: __init__.py  coord_converter.py  qa_generator.py
parsers/: __init__.py  cvat_parser.py
pipeline/: __init__.py  extract.py  splitter.py  validate.py
scripts/: train_swift.sh  train_unsloth.py
server/: __main__.py  api.py  main.py  pipeline_runner.py  ws.py
utils/: __init__.py  image_utils.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.vue
web/src/assets/: style.css
web/src/components/: AppLayout.vue  ConfigPanel.vue  DownloadPanel.vue  FileUpload.vue  ModelSelector.vue  ProgressLog.vue  SamplePreview.vue  Sidebar.vue  StatsPanel.vue  icons.js
web/src/composables/: useWebSocket.js
web/src/router/: index.js
web/src/stores/: pipeline.js
web/src/views/: HelpView.vue  ProcessView.vue  TrainView.vue
